Resolve horizontal scrolling / overflow issue. Style updates

--- a/app/sass/_footer.sass
+++ b/app/sass/_footer.sass
@@ -31,6 +31,7 @@ footer
           text-decoration: none
           color: $white
           font-size: 0.8em
+          line-height: 2.25em
 
 
   &.copyright
