--- a/app/sass/_navigation.sass
+++ b/app/sass/_navigation.sass
@@ -22,7 +22,7 @@
   ul.menu
     > li.menu-item
       > ul.sub-menu
-        width: 100vw
+        width: 100%
         position: absolute
         background: #455a64
         left: 0px
